--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
     />
+    <!-- favicon -->
+    <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="./assets/images/favicon1.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./assets/images/favicon1.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./assets/images/favicon1.png"
+  />
+
+   <!-- open graph -->
+   <meta property="og:title" content="jinyeong" />
+   <meta property="og:description" content="진영'S MUNIKUND" />
+   <meta
+     property="og:image"
+     content="https://jinyeong9284.github.io/PORTFOLIO/assets/images/project01.png"
+   />
+   <meta
+     property="og:url"
+     content="https://jinyeong9284.github.io/MUNIKUND/index.html"
+   />
+
     <!-- font -->
     <link rel="stylesheet" href="./assets/styles/pretendard.css" />
 
     <!-- style -->
     <link rel="stylesheet" href="./index.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- jQuery -->
     <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -28,7 +60,7 @@
         <a href="./index.html"><img src="./assets/images/logo .png" /></a>
       </h1>
       <ul>
-        <li><a href="#" class="on">MAIN</a></li>
+        <li><a href="#" class="check">MAIN</a></li>
         <li><a href="#">SHOP</a></li>
         <li><a href="#">REVIEW</a></li>
         <li><a href="#">Q&A</a></li>
@@ -42,7 +74,7 @@
       <img src="./assets/images/star.png" alt="star" class="star posi" />
       <div class="top-img2 posi"></div>
       <div class="top-img3 posi"></div>
-      <img src="./assets/images/smell.png" alt="smell" class="smell posi" />
+      <img src="./assets/images/icon5.png" alt="smell" class="smell posi" />
       <div class="top-img4 posi"></div>
       <div class="top-img5 posi"></div>
       <div class="top-img6 posi"></div>
@@ -84,11 +116,13 @@
           <div class="contents">
             <div class="mobile-app-bug">
               <img src="./assets/images/dog1.jpg" alt="dog1" class="mobile-image" />
+              <div class="letter-event">
               <p class="name">Bug Guard Series</p>
               <p class="text">
                 해출방지와 쿨링을 한번에! 버그가드 시리즈를 만나보세요. 해충방지
                 특수가공과 에어로쿨 소재의 결합으로 안전하고 쾌적한 산책을 제공
               </p>
+            </div>
               <div class="color-choose">
                 <div class="blue">
                   <p>Blue Flower</p>
@@ -205,7 +239,7 @@
       <div class="mobile-app-textwrapper">
         <div class="mobile-app-text1">
           <img src="./assets/images/logo .png" alt="logo" class="logo-app" />
-          <img src="./assets/images/sparko.png" alt="sparko" class="sparko" />
+          <img src="./assets/images/icon3.png" alt="sparko" class="sparko" />
           <div class="word-wrapper">
             <div class="word-container">많<span class="word">많</span></div>
             <div class="word-container">은<span class="word">은</span></div>
@@ -275,7 +309,7 @@
           </div>
           <div class="mobile-app-text3">
             <img src="./assets/images/logo .png" alt="logo" class="logo-app" />
-            <img src="./assets/images/sparky.png" alt="spark" class="sparky" />
+            <img src="./assets/images/icon4.png" alt="spark" class="sparky" />
             <div class="word-wrapper">
               <div class="word-container">많<span class="word">많</span></div>
               <div class="word-container">은<span class="word">은</span></div>
@@ -329,7 +363,18 @@
     <!-- img wrapper -->
     <section class="img-wrapper">
       <div class="img-dog1 op"></div>
-      <img src="./assets/images/smell.png" alt="smell" class="smell">
+      <div class="svg-container">
+      <?xml version="1.0" encoding="utf-8"?>
+      <!-- Generator: Adobe Illustrator 24.2.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+         viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve" class="svg-icon">
+      <style type="text/css">
+        .st0{fill:none;stroke:#FFCE00;stroke-width:6;stroke-linecap:round;stroke-miterlimit:10;}
+      </style>
+      <path class="st0" d="M218.5,101.5c0,0-24,167,24,194c10.24-5.79,21.97-4.15,27.05-17.11c1.64-4.19,1.87-9.4-2.98-11.37
+        c-17.55-7.11-23.55,31.85-24.07,40.48c-4,67,57,90,57,90"/>
+      </svg>
+    </div>
       <div class="img-dog2 op"></div>
       <p class="img-contents">뮤니쿤트는 반려동물의 움직임과 몸의 기능을 수행하는 것을 돕기 위한 특별한 설계과정을 전 제품에 적용합니다. 
         수학적인 방식을 사용하며 결과에서 거꾸로 연역적으로 접근하는 방식을 사용하여 완제품이 수행해내야 할 기능을 
@@ -345,7 +390,7 @@
     <!-- dogrun -->
      <section class="dogrun-wrapper">
       <div class="dogrun-container">
-      <img src="./assets/images/dogrun1.gif" alt="dogrun">
+      <img src="./assets/images/dog-event2.gif" alt="dogrun">
       </div>
      </section>
 
@@ -356,7 +401,6 @@
         <div class="muni"></div>
         <p>만나보세요!</p>
         </div>
-        <img src="./assets/images/arrow2.png" alt="arrow2">
       </section>
 
       <!-- footer -->
@@ -372,7 +416,9 @@
         </ul>
         <div class="contents">
         <p>뮤니쿤트(MUNIKUND) | CEO : HUR SOMIE | 03698 서울특별시 서대문구 연희로25길 98 (연희동|) 1층 뮤니쿤트<br>
-        Business License : 477-08-00910 | E-Commerce Permit : 2022-서울서대문-0281<br> T : 0507-1314-3421 | E-mail : munikund@naver.com</p>
+        Business License : 477-08-00910 | E-Commerce Permit : 2022-서울서대문-0281<br> T : 0507-1314-3421 | E-mail : munikund@naver.com
+        <span><a href="https://jinyeong9284.github.io/PORTFOLIO/index.html">포트폴리오 보러가기</a></span>
+      </p>
         <div class="top">
           <p>Top</p>
           <img src="./assets/images/arrowwhite.png" alt="arrow">
